# g729

./: ProjectHome.md  README.md  acelp_ca.c  calcexc.c  coder.c  configure.ac  dec_gain.c  dec_lag3.c  dec_ld8a.c  dec_sid.c  dtx.c  gainpred.c  lpc.c  lpcfunc.c  oper_32b.c  p_parity.c  pitch_a.c  post_pro.c  postfilt.c  pred_lt3.c  qsidgain.c  qua_lsp.c  tab_dtx.c  tab_ld8a.c  taming.c  typedef.h
trunk/: Makefile.am  autogen.sh  basic_op.c  bits.c  cod_ld8a.c  cor_func.c  de_acelp.c  decoder.c  dspfunc.c  filter.c  lspdec.c  lspgetq.c  oper_32b.c  pre_proc.c  qsidlsf.c  qua_gain.c  typedef.h  util.c  vad.c
