lib_LTLIBRARIES         = libg729b.la
libg729b_la_CPPFLAGS = -fPIC

libg729b_la_SOURCES  = \
 acelp_ca.c\
 basic_op.c\
 bits.c\
 calcexc.c\
 cod_ld8a.c\
 cor_func.c\
 de_acelp.c\
 dec_gain.c\
 dec_lag3.c\
 dec_ld8a.c\
 dec_sid.c\
 dspfunc.c\
 dtx.c\
 filter.c\
 gainpred.c\
 lpc.c\
 lpcfunc.c\
 lspdec.c\
 lspgetq.c\
 oper_32b.c\
 p_parity.c\
 pitch_a.c\
 post_pro.c\
 postfilt.c\
 pre_proc.c\
 pred_lt3.c\
 qsidgain.c\
 qsidlsf.c\
 qua_gain.c\
 qua_lsp.c\
 tab_dtx.c\
 tab_ld8a.c\
 taming.c\
 util.c\
 vad.c
	
libg729b_la_LDFLAGS = $LDFLAGS -no-undefined
libg729b_la_HEADERS = *.h
libg729b_ladir = $(includedir)/g729b